// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venues Form google map is not enabled 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 dGyrAP"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/ecc2d7cf9d2342fdb31ae0e24958fcac/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography"
            >
              Add New Venue
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 fwyVrN"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 dnQbZE"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="0"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-8 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="0_name"
                        title="Venue Name"
                      >
                        Venue Name
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-8 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                          >
                            <input
                              class="ant-input"
                              id="0_name"
                              type="text"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-8 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="0_description"
                        title="Description"
                      >
                        Description
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-8 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input"
                            id="0_description"
                            rows="2"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item styledComponents__AddressFormItem-sc-1jr0ig3-1 duvejm"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-10 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        title="Address"
                      >
                        Address
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-10 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-affix-wrapper-disabled"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <svg>
                                SearchOutlined.svg
                              </svg>
                            </span>
                            <input
                              class="ant-input ant-input-disabled"
                              data-testid="address-input"
                              disabled=""
                              id="0_address_addressLine"
                              type="text"
                              value="350 W Java Dr, Sunnyvale, CA 94089, USA"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                                role="button"
                                tabindex="-1"
                              >
                                <svg
                                  class="styledComponents__CloseIcon-sc-1jr0ig3-0 etwmVJ"
                                >
                                  Close.svg
                                </svg>
                              </span>
                            </span>
                          </span>
                          <div
                            class="styledComponents__AddressMap-sc-1jr0ig3-2 kKTYqB"
                          >
                            <h3
                              class="ant-typography"
                            >
                              Map is not enabled
                            </h3>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                      >
                        Make sure to include a city and country in the address
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 fnOhXk"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 hFgoIn"
              type="button"
            >
              <span>
                Add
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Venues Form should render venues form 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 dGyrAP"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/ecc2d7cf9d2342fdb31ae0e24958fcac/venues"
              >
                Venues
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography"
            >
              Add New Venue
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 fwyVrN"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 dnQbZE"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="0"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-8 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="0_name"
                        title="Venue Name"
                      >
                        Venue Name
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-8 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                          >
                            <input
                              class="ant-input"
                              id="0_name"
                              type="text"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-8 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="0_description"
                        title="Description"
                      >
                        Description
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-8 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input"
                            id="0_description"
                            rows="2"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item styledComponents__AddressFormItem-sc-1jr0ig3-1 duvejm"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-10 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        title="Address"
                      >
                        Address
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-10 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <span
                              class="ant-input-prefix"
                            >
                              <svg>
                                SearchOutlined.svg
                              </svg>
                            </span>
                            <input
                              class="ant-input"
                              data-testid="address-input"
                              id="0_address_addressLine"
                              type="text"
                              value=""
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                                role="button"
                                tabindex="-1"
                              >
                                <svg
                                  class="styledComponents__CloseIcon-sc-1jr0ig3-0 etwmVJ"
                                >
                                  Close.svg
                                </svg>
                              </span>
                            </span>
                          </span>
                          <div
                            class="styledComponents__AddressMap-sc-1jr0ig3-2 kKTYqB"
                          >
                            <div
                              class="styledComponents__Wrapper-sc-1352uh8-0 bqUuIH"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                      >
                        Make sure to include a city and country in the address
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 fnOhXk"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 hFgoIn"
              type="button"
            >
              <span>
                Add
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 iHTOeV"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
